# mkworld_overlay

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  index.html  package.json
.github/: dependabot.yml
.github/workflows/: deployment.yml
frontend/: index.html  package.json  vite.config.ts
frontend/src/: app.tsx  i18n.ts  index.css  main.tsx
frontend/src/components/: field-picker.tsx  fit-text.tsx  index.ts  instructions.tsx  language-switcher.tsx  mmr-badge.tsx  player-card.tsx  search-form.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  index.ts  input.tsx  separator.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: index.ts  use-clipboard.ts  use-interval.ts  use-player.ts
frontend/src/lib/: api.ts
frontend/src/locales/: en.json  es.json  fr.json  ja.json
frontend/src/types/: index.ts
frontend/src/views/: home.tsx  index.ts  overlay.tsx
src/: main.rs
static/: script.js  styles.css
